--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.1.2",
+    "passport-local-mongoose": "^7.1.2"
   }
 }
